feat(charts): 新增图表模板页面
- 添加了多种图表组件的使用示例，包括折线图、柱状图、饼图、雷达图、仪表盘、散点图和热力图
- 实现了实时数据图表的功能，可以动态更新数据
-增加了图表配置选项，如数据点数量、更新间隔、主题和动画效果
- 添加了图表刷新和数据导出的功能

--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/sortablejs": "^1.15.8",
     "@vicons/ionicons5": "^0.13.0",
+    "echarts": "^5.4.3",
     "naive-ui": "^2.42.0",
     "pinia": "^3.0.3",
+    "sortablejs": "^1.15.6",
     "vue": "^3.5.17",
+    "vue-echarts": "^6.6.1",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
