feat: 添加加载遮罩组件并更新主题管理
- 在全局组件中新增 LoadingOverlay 组件，用于路由加载状态的展示
- 更新 package.json 以引入 @vicons/antd 依赖
- 调整主题管理逻辑，将主题状态和操作迁移至 theme.ts
- 优化 App.vue 和其他组件的主题相关代码，确保主题切换功能正常

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/sortablejs": "^1.15.8",
+    "@vicons/antd": "^0.13.0",
     "@vicons/ionicons5": "^0.13.0",
     "echarts": "^5.4.3",
     "naive-ui": "^2.42.0",
