feat(user): 实现用户状态持久化和路由数据恢复
-集成 pinia-plugin-persistedstate 插件，实现用户状态持久化
- 重构用户存储逻辑，支持路由数据的持久化和恢复
- 优化路由守卫，实现根据持久化数据动态加载路由
- 移除初始化用户状态的冗余逻辑

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "echarts": "^5.4.3",
     "naive-ui": "^2.42.0",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "sortablejs": "^1.15.6",
     "vue": "^3.5.17",
     "vue-echarts": "^6.6.1",
