--- a/package.json
+++ b/package.json
@@ -18,36 +18,37 @@
     "@types/sortablejs": "^1.15.8",
     "@vicons/antd": "^0.13.0",
     "@vicons/ionicons5": "^0.13.0",
-    "echarts": "^5.4.3",
+    "alova": "^3.3.4",
+    "echarts": "^5.6.0",
     "naive-ui": "^2.42.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "sortablejs": "^1.15.6",
     "vue": "^3.5.17",
-    "vue-echarts": "^6.6.1",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@iconify/vue": "^5.0.0",
     "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^22.15.32",
+    "@types/node": "^24.0.10",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.29.0",
-    "eslint-plugin-oxlint": "~1.1.0",
-    "eslint-plugin-vue": "~10.2.0",
+    "eslint": "^9.30.1",
+    "eslint-plugin-oxlint": "~1.5.0",
+    "eslint-plugin-vue": "~10.3.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.1.0",
-    "prettier": "3.5.3",
-    "typescript": "~5.8.0",
+    "oxlint": "~1.5.0",
+    "prettier": "3.6.2",
+    "typescript": "~5.8.3",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.8.0",
     "vfonts": "^0.0.3",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "^7.0.2",
     "vite-plugin-vue-devtools": "^7.7.7",
-    "vue-tsc": "^2.2.10"
+    "vue-tsc": "^3.0.1"
   }
 }
